@@ -1,6 +1,7 @@
 //////////////////////////////////////////////////////////////////////////
 //  
 //  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2011, John Haddon. All rights reserved.
 //  
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -59,7 +60,7 @@ class ParameterisedHolderNodeWrapper : public ParameterisedHolderNode, public IE
 			initNode( this, inputs, dynamicPlugs );
 		}		
 		
-		GAFFERBINDINGS_NODEWRAPPERFNS( ParameterisedHolderNode )
+		GAFFERBINDINGS_PARAMETERISEDHOLDERWRAPPERFNS( ParameterisedHolderNode )
 
 };
 
