@@ -17,6 +17,8 @@ See python/GafferTest/ParameterhHandlerTest.py for an example.
 
 * The PathListingWidget now allows multiple selection of files using the allowMultipleSelection argument to the constructor, and provides a list of the currently selected paths using the selectedPaths() method.
 
+* Implemented the ParameterisedHolder::setParameterised( className, classVersion, searchPathEnvVar ) overload. Still needs some work so nodes can be serialised to a script and reloaded properly.
+
 0.16.0
 ------
 
